crates/flux-parity/tests/snapshots/parity__parity_flux_042_animate.snap
---
source: crates/flux-parity/tests/parity.rs
expression: serialized
---
verdict: equivalent

 dev    == [
    Component {
        name: "AnimatedCard",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Animate",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
swift  == [
    Component {
        name: "AnimatedCard",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Animate",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
kotlin == [
    Component {
        name: "AnimatedCard",
        children: [
            Primitive {
                name: "Column",
                props: [],
                children: [
                    Primitive {
                        name: "Button",
                        props: [],
                        children: [],
                    },
                    Primitive {
                        name: "Animate",
                        props: [],
                        children: [],
                    },
                ],
            },
        ],
    },
]
